[package]
name = "wizard-rs"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.1", features = ["persistence"] }
# egui = "0.24.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

socket2 = "0.5.5"
local-ip-address = "0.5.6"

strum = "0.25"
strum_macros = "0.25"
ipnet = "2.9.0"
interprocess = "1.2.1"
ctrlc = "3.4.2"
nix = "0.27.1"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
egui = "0.25.0"


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
